# rdx-rivendell

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTES.md  RDX-BLUEPRINT.md  RDX-v3.0.4-MATE-Compatibility.md  README.md  TODO.md  create-package.sh  demo-smart-installer.sh  fix-permissions.sh  install-rdx.sh  quick-fix-permissions.sh  rdx-broadcast-control-center.desktop  rdx-debug-launcher.desktop  rdx-terminal-launcher.desktop  smart-install.sh  test-desktop-detection.sh  test-stream-persistence.py
build-adaptive/: CMakeCache.txt  cmake_install.cmake
build-adaptive/rivendell-headers/: rdgroup_list.h  rdschedcodelistmodel.h
build-adaptive/src/rdx-gui/: cmake_install.cmake
build-adaptive/src/rdx-jack/: cmake_install.cmake  moc_rdx_jack_service.cpp_parameters
build-adaptive/src/rdx-jack/__/__/include/rdx/: moc_rdx_jack_manager.cpp_parameters
build-enhanced/: CMakeCache.txt  cmake_install.cmake
build-enhanced/src/rdx-gui/: cmake_install.cmake
build-enhanced/src/rdx-jack/: cmake_install.cmake  moc_rdx_jack_service.cpp_parameters  rdx-jack-helper  rdx-jack-helper.service
build-enhanced/src/rdx-jack/__/__/include/rdx/: moc_rdx_jack_manager.cpp_parameters
config/: rdx-jack.conf  rdx-profiles.xml
config/butt/: rdx-buttrc.sample
config/darkice/: darkice-rdx.service  rdx-darkice.cfg
config/dbus/: org.rdx.jack.conf
deb-builds/: rdx-rivendell-enhanced_2.1.1_amd64.deb  rdx-rivendell-enhanced_2.1.2_amd64.deb  rdx-rivendell-enhanced_2.1.3_amd64.deb  rdx-rivendell-enhanced_2.1.4_amd64.deb  rdx-rivendell-enhanced_2.1.5_amd64.deb  rdx-rivendell-enhanced_2.2.0_amd64.deb
docs/: AAC_STREAMING_GUIDE.md  AUTOMATED_INSTALLATION.md  DEPLOYMENT-SUCCESS-REPORT.md  PACKAGE-BUILDER-GUIDE.md  QUICK-BUILD-REFERENCE.md  SMART_INSTALLER_GUIDE.md  architecture-audit.md  dependency-matrix.md  gui-integration.md  integration-breakthrough.md  packaging-dependencies.md  packaging-tradeoffs-analysis.md
include/rdx/: rdx_jack_manager.h
releases/: rdx-broadcast-control-center_3.1.2_amd64.deb  rdx-broadcast-control-center_3.1.3_amd64.deb  rdx-broadcast-control-center_3.1.4_amd64.deb  rdx-broadcast-control-center_3.1.5_amd64.deb
rivendell-installer/: rdx-integration.sh
rivendell-installer/APPS/: radio.liq
scripts/: README.md  build-all-packages.sh  build-deb-adaptive.sh  build-deb-core.sh  build-deb-enhanced.sh  build-deb-package.sh  build-rdx-broadcast-center.sh  create-deployment-packages.sh  dependency-demo.sh  encoder-wait-ready.sh  extract-changelog-section.py  fix-rdx-app-indentation.py  install-liquidsoap-opam.sh  install-rdx.sh  jack-wait-ready.sh  postinst-template.sh  publish-rdx-release.sh  rdx-debug-integration.sh  rdx-install-complete.sh  rdx-manual-integration.sh  release-rdx.sh
src/: rdx-broadcast-control-center.py  rdx-broadcast-control-center.py.bak  rdx-enhanced-launcher.py
src/rdx-admin/: CMakeLists.txt
src/rdx-gui/: CMakeLists.txt  rdx_integration.cpp  rdx_integration.h  rdx_jack_dialog.cpp  rdx_jack_dialog.h
src/rdx-jack/: CMakeLists.txt  main.cpp  rdx-aac-stream.sh  rdx-jack-helper.service.in  rdx_aac_streamer.cpp  rdx_jack_manager.cpp  rdx_jack_service.cpp  rdx_jack_service.h
